# vk-fuckery

./: .gitignore  Cargo.toml  build.rs  links.md
shaders/: main.frag  main.fs.glsl  main.vert  main.vs.glsl
src/: gfx.rs  main.rs
src/gfx/: allocator.rs  core.rs  debug.rs  deletion_queue.rs  presentable_surface.rs
