[package]
name = "vk-fuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ash = "0.38"
ash-window = "0.13"
log = "0.4.20"
raw-window-handle = "0.6.0"
simplelog = "0.12.1"
winit = "0.30"

[build-dependencies]
anyhow = "1.0.75"
